tests222/tests2/test355.out
lli: <stdin>:1:1: error: expected top-level entity
line 2: variable CtYELL is not defined
^
